<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_2ssp">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3ssp"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAuthor"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="@dimen/_3ssp"
        android:text="@string/text_project_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewProjectName"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="@dimen/_3ssp"
        android:text="@string/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProjectName" />


    <ImageView
        android:id="@+id/imageViewLanguageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="@dimen/_3ssp"
        android:text="@string/text_language"
        app:layout_constraintStart_toEndOf="@+id/imageViewLanguageLogo"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <TextView
        android:id="@+id/textViewRepoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="@dimen/_3ssp"
        android:text="@string/text_repo_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <ImageView
        android:id="@+id/imageViewRepoStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintEnd_toStartOf="@+id/textViewRepoCount"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>